--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
-            <title>CONTENANCE</title>
+            <title>Contenance.</title>
             <link href="style.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,13 +29,13 @@
                     <div><i class="arrow-mobile-close"></i>ZURÜCK</div>
                 </a>
                 <a class="link-mobile" href="./korkset.html">
-                    <div class="menu-text-mobile">KORKSET</div>
+                    <div class="menu-text-mobile">YOGA KORK SET</div>
                 </a>
                 <a class="link-mobile" href="./korkblock.html">
-                    <div class="menu-text-mobile">KORKBLOCK</div>
+                    <div class="menu-text-mobile">YOGA KORK BLOCK</div>
                 </a>
-                <a class="link-mobile" href="./faszienball.html">
-                    <div class="menu-text-mobile">FASZIENBALL</div>
+                <a class="link-mobile" href="./faszienballset.html">
+                    <div class="menu-text-mobile">FASZIEN-BALL SET</div>
                 </a>
             </div>
             
@@ -61,9 +61,9 @@
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn menu-link">OUR PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
-                        <a class="menu-link" id="dropdown-first" href="./korkset.html">KORKSET</a>
-                        <a class="menu-link" href="./korkblock.html">KORKBLOCK</a>
-                        <a class="menu-link" id= "dropdown-last" href="./faszienball.html">FASZIENBALL</a>
+                        <a class="menu-link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
+                        <a class="menu-link" href="./korkblock.html">YOGA KORK BLOCK</a>
+                        <a class="menu-link" id= "dropdown-last" href="./faszienball.html">FASZIEN-BALL SET</a>
                     </div>
                 </div>
             </div>
