--- a/faszienballset.html
+++ b/faszienballset.html
@@ -71,8 +71,16 @@
         </div>
         <div id="content">
             <div class="title-product">FASZIEN-BALL SET</div>
-            <div class="product-container">
+            <div class="product-container-amazon">
                 <img class="image-product" src="./media/balls.png" alt="Italian Trulli">
+                <div class="product-info-amazon">
+                        <div class="info-title">Contenance.® Premium Faszien-Ball Set: Einzelball, Duoball &amp; Igelball mit Nylonbeutel – Für Wohlbefinden, Regeneration &amp; Leistungssteigerung der Muskeln.</div>
+                        <div class="subtitle-product">EUR 24,95</div>
+                        <a target="_blank" class="button-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Faszien-Ball-Set-Leistungssteigerung/dp/B07F47L2Q5/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+faszien&qid=1601658942&sr=8-1">
+                            <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                            <div class="buy-amazon">Jetzt Kaufen</div>
+                        </a>
+                </div>
             </div>
             <div class="product-container-small">
                 <img class="image-product-small-no" src="./media/ball1.jpg" alt="Italian Trulli">
