--- a/korkblock.html
+++ b/korkblock.html
@@ -71,8 +71,16 @@
         </div>
         <div id="content">
             <div class="title-product">YOGA KORK BLOCK</div>
-            <div class="product-container">
+            <div class="product-container-amazon">
                 <img class="image-product" src="./media/korkset7.jpg" alt="Italian Trulli">
+                <div class="product-info-amazon">
+                        <div class="info-title">Contenance.® Yoga Block aus Naturkork – robust &amp; rutschfest – für Stabilität &amp; Gleichgewicht.</div>
+                        <div class="subtitle-product">EUR 14,95</div>
+                        <a target="_blank" class="button-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Yoga-Block-Naturkork-Gleichgewicht/dp/B088Q2WXS9/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-3">
+                            <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                            <div class="buy-amazon">Jetzt Kaufen</div>
+                        </a>
+                </div>
             </div>
             <div class="product-container-small">
                 <img class="image-product-small-no" src="./media/korkset8.jpg" alt="Italian Trulli">
