--- a/faszienballset.html
+++ b/faszienballset.html
@@ -83,8 +83,8 @@
                 </div>
             </div>
             <div class="product-container-small">
-                <img class="image-product-small-no" src="./media/ball1.jpg" alt="Italian Trulli">
-                <div class="product-info-no">
+                <img class="image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
+                <div class="product-info">
                         <div class="info-title-list">Duo-Ball (Peanut Ball)</div>
                         <ul class="info-list">
                             <li>14cm Durchmesser</li>
@@ -109,11 +109,11 @@
                             <li>Gesicht, Schläfe und Kiefer</li>
                         </ul>
                 </div>
-                <img class="image-product-small-right-no" src="./media/ball2.jpg" alt="Italian Trulli">
+                <img class="image-product-small-right" src="./media/ball2.jpg" alt="Italian Trulli">
             </div>
             <div class="product-container-small">
-                <img class="image-product-small-no" src="./media/ball1.jpg" alt="Italian Trulli">
-                <div class="product-info-no">
+                <img class="image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
+                <div class="product-info">
                         <div class="info-title-list">Igel-Ball (Spiky Ball)</div>
                         <ul class="info-list">
                             <li>9cm Durchmesser</li>
