--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
-            <link href="style.css" rel="stylesheet" />
+            <link href="style3.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -33,24 +33,29 @@
                 <div class="closeitembar" id="closebar2"></div>
         </div>
         <div id="header">
-            <a id="link-home" class="link" href="./index.html">
-                <h1 id="name-home">Contenance.</h1>
-            </a>
             <div id="menuitem">
                     <div class="menuitembar"></div>
                     <div class="menuitembar"></div>
                     <div class="menuitembar"></div>
             </div>
-            <div id="menu">
-                <a id="link-behind" class="link" href="./behind.html">BEHIND</a>
-                <div class="dropdown">
-                    <a id="link-products" class="dropbtn link">OUR PRODUCTS<i class="arrow"></i></a>
-                    <div class="dropdown-content">
-                        <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
-                        <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
-                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
+            <div id="container-header">
+                <div>
+                    <a id="link-home" class="link" href="./index.html">
+                        <h1 id="name-home">Contenance.</h1>
+                    </a>
+                    <div id="menu">
+                        <a id="link-behind" class="link" href="./behind.html">BEHIND</a>
+                        <div class="dropdown">
+                            <a id="link-products" class="dropbtn link">OUR PRODUCTS<i class="arrow"></i></a>
+                            <div class="dropdown-content">
+                                <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
+                                <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
+                                <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <a href="./index.html"><img id="image-logo" src="./media/logo1.png" alt="Italian Trulli"></a>
             </div>
         </div>
         <div id="content">
@@ -58,7 +63,8 @@
         </div>
         <div id = "footer">
             <div class="footer-colomn">
-                <div class="footer-title">CONTENANCE</div>
+                <img id="image-logo-footer" src="./media/logo1.png" alt="Italian Trulli">
+                <div class="footer-title1">Contenance.</div>
                 <div>A Berlin based Sports Brand.</div>
             </div>
             <div class="footer-colomn">
