--- a/faszienballset.html
+++ b/faszienballset.html
@@ -10,46 +10,31 @@
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
             <link href="style.css" rel="stylesheet" />
-            <link href="style-korkset.css" rel="stylesheet" />
+            <link href="style-product.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
             <script src="script.js"></script>
     </head>
     <body>
-        <div class="opacitylayer">
-
-        </div>
+        <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link-mobile" href="./behind.html">
-                <div class="menu-text-mobile">BEHIND</div>
-            </a>
-            
+            <a class="link link-mobile" href="./behind.html">BEHIND</a> 
             <div class="products-mobile">
-                <a class="link-mobile"  id="link-back-mobile">
-                    <div><i class="arrow-mobile-close"></i>ZURÜCK</div>
-                </a>
-                <a class="link-mobile" href="./korkset.html">
-                    <div class="menu-text-mobile">YOGA KORK SET</div>
-                </a>
-                <a class="link-mobile" href="./korkblock.html">
-                    <div class="menu-text-mobile">YOGA KORK BLOCK</div>
-                </a>
-                <a class="link-mobile" href="./faszienballset.html">
-                    <div class="menu-text-mobile">FASZIEN-BALL SET</div>
-                </a>
+                <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
+                <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
+                <a class="link link-mobile" href="./korkblock.html">YOGA KORK BLOCK</a>
+                <a class="link link-mobile" href="./faszienballset.html">FASZIEN-BALL SET</a>
             </div>
-            
-            <a class="link-mobile" id="link-products-mobile">
-                <div class="menu-text-mobile">PRODUCTS <i class="arrow-mobile-open"></i></div>
+            <a class="link link-mobile" id="link-products-mobile">PRODUCTS<i class="arrow-mobile arrow-mobile-open"></i>
             </a>
         </div>
         <div id="closeitem">
-                <div id="closeitembar1"></div>
-                <div id="closeitembar2"></div>
+                <div class="closeitembar" id="closebar1"></div>
+                <div class="closeitembar" id="closebar2"></div>
         </div>
         <div id="header">
-            <a id="link-home" href="./index.html">
+            <a id="link-home" class="link" href="./index.html">
                 <h1 id="name-home">Contenance.</h1>
             </a>
             <div id="menuitem">
@@ -58,34 +43,34 @@
                     <div class="menuitembar"></div>
             </div>
             <div id="menu">
-                <a id="link-behind" class="menu-link" href="./behind.html">BEHIND</a>
+                <a id="link-behind" class="link" href="./behind.html">BEHIND</a>
                 <div class="dropdown">
-                    <a id="link-products" class="dropbtn menu-link">OUR PRODUCTS<i class="arrow"></i></a>
+                    <a id="link-products" class="dropbtn link">OUR PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
-                        <a class="menu-link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
-                        <a class="menu-link" href="./korkblock.html">YOGA KORK BLOCK</a>
-                        <a class="menu-link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                        <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
+                        <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
+                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
                     </div>
                 </div>
             </div>
         </div>
         <div id="content">
             <div class="title-product">FASZIEN-BALL SET</div>
-            <div class="product-container-amazon">
+            <div class="container-product container-product-amazon">
                 <img class="image-product" src="./media/balls.png" alt="Italian Trulli">
-                <div class="product-info-amazon">
+                <div class="product-info product-info-amazon">
                         <div class="info-title">Contenance.® Premium Faszien-Ball Set: Einzelball, Duoball &amp; Igelball mit Nylonbeutel – Für Wohlbefinden, Regeneration &amp; Leistungssteigerung der Muskeln.</div>
-                        <div class="subtitle-product">EUR 24,95</div>
-                        <a target="_blank" class="button-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Faszien-Ball-Set-Leistungssteigerung/dp/B07F47L2Q5/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+faszien&qid=1601658942&sr=8-1">
+                        <div class="info-subtitle">EUR 24,95</div>
+                        <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Faszien-Ball-Set-Leistungssteigerung/dp/B07F47L2Q5/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+faszien&qid=1601658942&sr=8-1">
                             <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
                             <div class="buy-amazon">Jetzt Kaufen</div>
                         </a>
                 </div>
             </div>
-            <div class="product-container-small">
-                <img class="image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
-                <div class="product-info">
-                        <div class="info-title-list">Duo-Ball (Peanut Ball)</div>
+            <div class="container-product container-product-small">
+                <img class="image-product image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
+                <div class="product-info product-info-right">
+                        <div class="info-title info-title-list">Duo-Ball (Peanut Ball)</div>
                         <ul class="info-list">
                             <li>14cm Durchmesser</li>
                             <li>Material: Silikone/Kunststoff</li>
@@ -95,9 +80,9 @@
                         </ul>
                 </div>
             </div>
-            <div class="product-container-small">
-                <div class="product-info-left">
-                        <div class="info-title-list">Einzel-Ball (Lacrosse Ball)</div>
+            <div class="container-product container-product-small">
+                <div class="product-info">
+                        <div class="info-title info-title-list">Einzel-Ball (Lacrosse Ball)</div>
                         <ul class="info-list">
                             <li>6,3cm Durchmesser</li>
                             <li>Material: Silikone/Kunststoff</li>
@@ -109,12 +94,12 @@
                             <li>Gesicht, Schläfe und Kiefer</li>
                         </ul>
                 </div>
-                <img class="image-product-small-right" src="./media/ball2.jpg" alt="Italian Trulli">
+                <img class="image-product image-product-small-right" src="./media/ball2.jpg" alt="Italian Trulli">
             </div>
-            <div class="product-container-small">
-                <img class="image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
-                <div class="product-info">
-                        <div class="info-title-list">Igel-Ball (Spiky Ball)</div>
+            <div class="container-product container-product-small">
+                <img class="image-product image-product-small" src="./media/ball3.jpg" alt="Italian Trulli">
+                <div class="product-info product-info-right">
+                        <div class="info-title info-title-list">Igel-Ball (Spiky Ball)</div>
                         <ul class="info-list">
                             <li>9cm Durchmesser</li>
                             <li>Material: Kunststoff</li>
@@ -128,22 +113,22 @@
             </div>
         </div>
         <div id = "footer">
-            <div id="footer-left" class="footer-colomn">
-                <div class="title-footer">CONTENANCE</div>
+            <div class="footer-colomn">
+                <div class="footer-title">CONTENANCE</div>
                 <div>A Berlin based Sports Brand.</div>
             </div>
-            <div id="footer-info" class="footer-colomn">
-                <div class="title-footer">INFO</div>
-                <a class="link-info-footer">Kontakt</a>
-                <a class="link-info-footer">Support</a>
-                <a class="link-info-footer">AGB's</a>
-                <a class="link-info-footer">Impressum</a>
-                <a class="link-info-footer">Datenschutzerklärung</a>
+            <div class="footer-colomn">
+                <div class="footer-title">INFO</div>
+                <a class="link link-footer">Kontakt</a>
+                <a class="link link-footer">Support</a>
+                <a class="link link-footer">AGB's</a>
+                <a class="link link-footer">Impressum</a>
+                <a class="link link-footer">Datenschutzerklärung</a>
             </div>
-            <div id="footer-right" class="footer-colomn">
-                <div class="title-footer">SOCIALMEDIA</div>
-                <a class="link-info-footer" href="facebook.com">Facebook</a>
-                <a class="link-info-footer" href="instagram.com">Instagram</a>
+            <div class="footer-colomn">
+                <div class="footer-title">SOCIALMEDIA</div>
+                <a class="link link-footer" href="facebook.com">Facebook</a>
+                <a class="link link-footer" href="instagram.com">Instagram</a>
             </div>
         </div>
 
