--- a/index3.html
+++ b/index3.html
@@ -77,8 +77,9 @@
             </div>
             <div class="footer-colomn">
                 <div class="footer-title">SOCIALMEDIA</div>
-                <a class="link link-footer" href="facebook.com">Facebook</a>
-                <a class="link link-footer" href="instagram.com">Instagram</a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
             </div>
         </div>
 
