--- a/korkset2.html
+++ b/korkset2.html
@@ -99,7 +99,7 @@
                 </div>
                 <img class="image-product image-product-small-right" src="./media/korkset6.jpg" alt="Italian Trulli">
             </div>
-            <div class="container-product">
+            <div class="container-product container-product-amazon">
                 <img class="image-product" src="./media/korkset1.jpg" alt="Italian Trulli">
             </div>
         </div>
