--- a/korkset2.html
+++ b/korkset2.html
@@ -54,53 +54,55 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <div class="title-product">YOGA KORK SET</div>
-            <div class="container-product container-product-amazon">
-                <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
-                <div class="product-info product-info-amazon">
-                        <div class="info-title">Contenance.® Faszien Yoga Set – robust &amp; rutschfest – Rolle, Bälle, Rad und Block aus Naturkork.</div>
-                        <div class="info-subtitle">EUR 49,95</div>
-                        <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
-                            <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                            <div class="buy-amazon">Jetzt Kaufen</div>
-                        </a>
+        <div id="container-content">
+            <div id="content">
+                <div class="title-product">YOGA KORK SET</div>
+                <div class="container-product container-product-amazon">
+                    <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
+                    <div class="product-info product-info-amazon">
+                            <div class="info-title">Contenance.® Faszien Yoga Set – robust &amp; rutschfest – Rolle, Bälle, Rad und Block aus Naturkork.</div>
+                            <div class="info-subtitle">EUR 49,95</div>
+                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
+                                <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                                <div class="buy-amazon">Jetzt Kaufen</div>
+                            </a>
+                    </div>
                 </div>
-            </div>
-            <div class="container-product container-product-small">
-                <img class="image-product image-product-small" src="./media/korkset4.jpg" alt="Italian Trulli">
-                <div class="product-info product-info-right">
-                        <div class="info-title">FLEXIBILITÄT &amp; MOBILITÄT</div>
-                        <div class="info-subtitle">Das Yoga Kork Rad</div>
-                        <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>
+                <div class="container-product container-product-small">
+                    <img class="image-product image-product-small" src="./media/korkset4.jpg" alt="Italian Trulli">
+                    <div class="product-info product-info-right">
+                            <div class="info-title">FLEXIBILITÄT &amp; MOBILITÄT</div>
+                            <div class="info-subtitle">Das Yoga Kork Rad</div>
+                            <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="container-product container-product-small">
-                <div class="product-info">
-                        <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
-                        <div class="info-subtitle">Der Yoga Kork Block</div>
-                        <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
+                <div class="container-product container-product-small">
+                    <div class="product-info">
+                            <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
+                            <div class="info-subtitle">Der Yoga Kork Block</div>
+                            <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
+                    </div>
+                    <img class="image-product image-product-small-right" src="./media/korkset5.jpg" alt="Italian Trulli">
                 </div>
-                <img class="image-product image-product-small-right" src="./media/korkset5.jpg" alt="Italian Trulli">
-            </div>
-            <div class="container-product container-product-small">
-                <img class="image-product image-product-small" src="./media/korkset3.jpg" alt="Italian Trulli">
-                <div class="product-info product-info-right">
-                        <div class="info-title">VORBEREITUNG &amp; REGENERATION</div>
-                        <div class="info-subtitle">Die Yoga Kork Rolle</div>
-                        <div class="info-text">Die Faszien rücken immer mehr in den Vordergrund. Als bindegewebiges Netzwerk durchziehen sie den gesamten Körper und umhüllen dabei unsere Muskeln und Organe, wodurch sie die einzelnen Strukturen innerhalb unseres Körpers voneinander abgrenzen und verbinden. Sie verleihem unserem Körper Form, Stabilität und Flexibilität.</div>
+                <div class="container-product container-product-small">
+                    <img class="image-product image-product-small" src="./media/korkset3.jpg" alt="Italian Trulli">
+                    <div class="product-info product-info-right">
+                            <div class="info-title">VORBEREITUNG &amp; REGENERATION</div>
+                            <div class="info-subtitle">Die Yoga Kork Rolle</div>
+                            <div class="info-text">Die Faszien rücken immer mehr in den Vordergrund. Als bindegewebiges Netzwerk durchziehen sie den gesamten Körper und umhüllen dabei unsere Muskeln und Organe, wodurch sie die einzelnen Strukturen innerhalb unseres Körpers voneinander abgrenzen und verbinden. Sie verleihem unserem Körper Form, Stabilität und Flexibilität.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="container-product container-product-small">
-                <div class="product-info">
-                        <div class="info-title">ENTSPANNUNG &amp; DURCHBLUTUNG</div>
-                        <div class="info-subtitle">Die Yoga Kork Bälle</div>
-                        <div class="info-text">Im Unterschied zur Korkrolle, ist mit den Korkbällen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
+                <div class="container-product container-product-small">
+                    <div class="product-info">
+                            <div class="info-title">ENTSPANNUNG &amp; DURCHBLUTUNG</div>
+                            <div class="info-subtitle">Die Yoga Kork Bälle</div>
+                            <div class="info-text">Im Unterschied zur Korkrolle, ist mit den Korkbällen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
+                    </div>
+                    <img class="image-product image-product-small-right" src="./media/korkset6.jpg" alt="Italian Trulli">
                 </div>
-                <img class="image-product image-product-small-right" src="./media/korkset6.jpg" alt="Italian Trulli">
-            </div>
-            <div class="container-product container-product-amazon">
-                <img class="image-product" src="./media/korkset1.jpg" alt="Italian Trulli">
+                <div class="container-product container-product-amazon">
+                    <img class="image-product" src="./media/korkset1.jpg" alt="Italian Trulli">
+                </div>
             </div>
         </div>
         <div id = "footer">
